--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,14 +33,14 @@
     -->
 
     <!-- Definição do título do projeto -->
-    <title>CFP Aluno</title>
+    <title>CFP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <!-- O React entra aqui. -->
-    </div>
-    <!--     
+    <div id="root"></div>
+    <!--
+      O React entra aqui.
+      
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
